# mod_dav_acl

./: ChangeLog  Makefile.am  Makefile.in  README  README.md  acl_files  acl_liveprops.c  acl_liveprops.h  acl_private.h  acl_tests  apr-1.2.7-ju1.patch  apr-util-1.3.9-ju.patch  config.h.in  configure  configure.ac  configure.in  dav_acl.conf  dav_acl.load  httpd-2.2.12-dav.patch  httpd-2.2.12-etag.patch  httpd-2.2.12-ju.patch  httpd-2.2.12-liveprops.patch  httpd-2.2.12-repos.patch  httpd-2.2.16-ju.patch  httpd-2.2.6-ju.patch  httpd-2.2.8-ju.patch  mod_dav_acl.c  mod_dav_acl.h  mod_dav_acl.pc.in  mod_dav_acl.spec.in
debian/: changelog  control  copyright  mod-dav-acl-dev.install  mod-dav-acl.install  mod-dav-acl.manpages  rules
lib/: Makefile.am  Makefile.in  dav_acl.c
man/: Makefile.am  Makefile.in  acl-principals.1  acl-test-cli.1  acl-xpath.1
tools/: Makefile.am  Makefile.in  acl-principals  test-cli.c  xpath.c
